--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -1,6 +1,13 @@
 {
-  "HomePage": {
-    "title": "Hello world!",
-    "about": "Go to the about page"
-  }
+    "HomePage": {
+        "Herosection": {
+            "title": "Web3 is simple",
+            "title2": "— even grandma will get it with Zyphera!",
+            "subtitle": "Zyphera is a simple and reliable crypto wallet that makes managing digital assets easy and clear for everyone.",
+            "buttons": {
+                "wallet": "Go to Wallet",
+                "details": "Learn More"
+            }
+        }
+    }
 }
