--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -1,6 +1,13 @@
 {
-  "HomePage": {
-    "title": "Привет мир!",
-    "about": "Перейти на страницу о нас"
-  }
+    "HomePage": {
+        "Herosection": {
+            "title": "Web3 - это просто",
+            "title2": "— даже бабушка поймёт с Zyphera!",
+            "subtitle": "Zyphera - простой и надёжный криптокошелёк, который сделает управление цифровыми активами лёгким и понятным для всех.",
+            "buttons": {
+                "wallet": "Попасть в кошелёк",
+                "details": "Подробнее"
+            }
+        }
+    }
 }
