--- a/localization/ru.json
+++ b/localization/ru.json
@@ -18,11 +18,12 @@
             "subtitle": "Внимательно проверяйте открываемые ссылки!",
             "downloadMobile": "Скачать приложение на ваш телефон",
             "or": "или",
-            "openWeb": "Открыть в браузере"
+            "openWeb": "Открыть Zyphera"
         }
     },
     "HomePage": {
         "Herosection": {
+            "tg": "Присоединяйся в тг: @ZypheraWallet",
             "title": "Web3 - это просто",
             "title2": "— даже бабушка поймёт с Zyphera!",
             "subtitle": "Zyphera - простой и надёжный криптокошелёк, который сделает управление цифровыми активами лёгким и понятным для всех.",
