--- a/localization/uk.json
+++ b/localization/uk.json
@@ -18,7 +18,7 @@
             "subtitle": "Уважно перевіряйте посилання, які відкриваєте!",
             "downloadMobile": "Завантажити додаток на телефон",
             "or": "або",
-            "openWeb": "Відкрити у браузері"
+            "openWeb": "Відкрити Zyphera"
         }
     },
     "HomePage": {
